--- a/src/css/timer.css
+++ b/src/css/timer.css
@@ -17,3 +17,22 @@
   font-weight: 500;
   text-transform: uppercase;
 }
+input {
+  width: 200px;
+  padding: 10px;
+  border-radius: 5px;
+  border-color: blue;
+}
+input:disabled {
+  border-color: rgb(134, 124, 124);
+}
+button {
+  cursor: pointer;
+  display: inline-block;
+  width: 120px;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: blue;
+  color: white;
+  border-color: transparent;
+}
