--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -6,6 +6,7 @@
 */
 @import url('./reset.css');
 @import url('./timer.css');
+@import url('./promise.css');
 
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
